# Coinsequence-user-profile

./: .env.example  .gitignore  README.md  alembic.ini  convox.yml  mypy.ini  pyproject.toml
.github/workflows/: build.yml  deploy-main.yml  deploy.yml  publish.yml
app/: container.py  server.py
app/api/api_v1/: health.py  routes.py
app/api/api_v1/connections/: connection.py  connection_request.py
app/api/api_v1/student/: activity.py  application.py  award.py  college_university.py  education.py  grade.py  profile.py  roles.py  score.py  search_profile.py  test.py  voluntary.py  work.py
app/consumer/: karma_coins_minted.py  student_funds_courses_updated.py  user_updated.py
app/domain/connections/data/: connection.py  (+1 more)
app/infra/: config.py
app/masterdata_shared/: api_client.py  config.py
app/masterdata_shared/domain/: client.py  data.py
app/repository/: activity_stream.py
app/repository/db/: activity.py  address.py  application.py  award.py  children_profile.py  college_university.py  connection.py  connection_request.py  education.py  grade.py  profile.py  profile_privacy.py  roles.py  score.py  student_fund_courses.py  test.py  user_karma.py  voluntary.py  work.py
app/shared/infra/: database.py  log_config.py  setup_s3.py  setup_sns_sqs.py
app/shared/repository/: event_client.py  onesignal_email_client.py  pinecone_vectordb_client.py  storage_client.py
app/shared/utils/: auth.py  custom_json_serializer.py  jwt.py
app/utils/: validator.py
docker/: Dockerfile  Dockerfile.production  docker-compose.local.yml  docker-entrypoint-prod.sh  docker-entrypoint.sh  gunicorn_conf.py  prod_script.sh
migrations/: env.py
migrations/versions/: 3d2884972404_added_application_table.py  3f7ea0142716_added_student_funds_courses_table_to_.py  5896203132e7_profile_sect_type.py  5986e6084992_added_ids_in_user_profile_table_for_.py  6f0e8fff647c_initial_mig.py  841ffc88f737_added_user_karma_table_to_sync_karma_.py  cb5e67c9d120_add_profile_city.py  e7bab4310660_added_cascade_on_delete_on_some_.py  ecd4931c2a02_alter_userprofile_schema.py
scripts/: build.sh  lint.sh  test.sh
(+178 files in other folders)
