[tool.poetry]
name = "backend.profile"
version = "0.1.1"
description = ""
authors = ["Nitesh <niteshyaadav@gmail.com>"]
repository = "https://github.com/coinsequence/accounts.backend"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"
orjson = "^3.7.2"
asyncpg = "^0.27.0"
fastapi = "0.89.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
passlib = "^1.7.4"
alembic = "^1.8.0"
psycopg2-binary = "^2.9.5"
asgi-correlation-id = "^3.0.0"
structlog = "^21.5.0"
ddtrace = "^1.1.4"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.0"}
arrow = "^1.2.2"
httpx = "^0.23.0"
dependency-injector = "^4.39.1"
PyJWT = {extras = ["crypto"], version = "^2.4.0"}
email-validator = "^1.2.1"
phonenumbers = "^8.12.53"
aiobotocore = "^2.3.4"
newrelic = "^8.4.0"
python-multipart = "^0.0.5"
sentry-sdk = {extras = ["fastapi"], version = "^1.12.1"}
stream-python = "^5.1.1"
pinecone-client = "^2.2.4"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.910"
pytest = "^7.1.2"
flake8 = "^4.0.1"
coverage = "^6.4.1"
pre-commit = "^2.19.0"
sqlalchemy-stubs = "^0.4"
types-aiobotocore = {extras = ["essential"], version = "^2.3.4.post3"}
watchdog = {extras = ["watchmedo"], version = "^2.1.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
experimental_string_processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage]
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]
